# cm3070-yardsentry

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  app_camera_esp.c  app_camera_esp.h  detection_responder.cc  detection_responder.h  esp_main.h  idf_component.yml  image_provider.cc  image_provider.h  image_store.c  image_store.h  main.cc  main_functions.cc  model_settings.cc  model_settings.h  mqtt.c  mqtt.h  person_detect_model_data.h  tf_main_functions.cc  tf_main_functions.h  webserver.c  webserver.h  wifi.c  wifi.h
